--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon"
+      href="https://uploads-ssl.webflow.com/618d068d04660411b63872f6/61a8a2935d913427d31de235_favicon.png"
+      type="image/x-icon">
     <title>GitHub Shaw</title>
   </head>
 
